--- a/_posts/2021-01-06-testinglatex.html
+++ b/_posts/2021-01-06-testinglatex.html
@@ -1,13 +1,16 @@
 ---
 layout: post
-title:  "Welcome to Jekyll 3"
-categories: jekyll update
-published: true
+title:  "Intro (what even is this?)"
+categories: intro 
+published: false
 ---
 
+<!-- <h2 class="section-heading">Hello</h2> -->
+<p>
+On this blog you will find a disorganized mix of theoretical computer science and general musings about literally anything else I find interesting. Hence the name of the blog (which is certainly not as clever as I think it is since I came up with it in all of twenty second). A nice diverse potpourri/amalgam/melange of topics is healthy right? Says the guy who finds something he likes and ignores literally everything else. Anyway, this blog is for me, as I venture into the vastly intimidating depths of both theoretical computer science and life. Hopefully this blog keeps me accountable, and will be an accurate log of the important things.
+</p>
 
 <p>
-hi, does mathjax work
 
-$$\sum_{i=1}^\infty \frac{1}{i}$$
+  I'm not too sure why I am writing this post, I doubt that anyone will read it (or this blog in general). 
 </p>
