first draft of first blog posts

--- a/_posts/2021-01-06-intro.html
+++ b/_posts/2021-01-06-intro.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Intro"
-subtitle: "\"I'm resolving to just wing it and see what happens.\" <br /><br /> -Bill Watterson"
+subtitle: "\"I'm resolving to just wing it and see what happens.\" <br /> -Bill Watterson"
 background: '/img/posts/intro-CH.jpeg'
 categories: intro 
 published: true
@@ -13,7 +13,7 @@ On this blog you will find a disorganized mix of theoretical computer science an
 </p>
 
 <p>
-  I also, clearly, am a fan of Calvin and Hobbes. If you are not familiar, I am not referring to the philosopher and the theologian, but rather the, some might argue far more eloquent, comic strip series by Bill Watterson, which premiered in newspapers between 1985 and 1995 and featured the precocious youth Calvin and his anthropomorphic tiger Hobbes. I am also fond of run-on sentences, so deal with it (or leave), this is my blog. Every post (for the forseeable future) will feature a quote from Calvin and Hobbes, that, at least in some convoluted way, has to do with that blog post. For example, I am winging both this blog and my life this year, which is also coincidentally my new year's resolution. So this quote's connection isn't even convoluted!
+  I also, clearly, am a fan of Calvin and Hobbes. If you are not familiar, I am not referring to the philosopher and the theologian, but rather the, some might argue far more eloquent, comic strip series by Bill Watterson, which premiered in newspapers between 1985 and 1995 and featured the precocious youth Calvin and his anthropomorphic tiger Hobbes. I am also fond of run-on sentences, so deal with it (or leave), this is my blog. Every post (for the forseeable future) will feature a quote from Calvin and Hobbes that, at least in some convoluted way, has to do with that blog post. For example, I am winging both this blog and my life this year, which is also coincidentally my new year's resolution. So this quote's connection isn't even convoluted!
 </p>
 
 <p>
