--- a/_posts/2021-01-06-parrep.html
+++ b/_posts/2021-01-06-parrep.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Strong Parallel Repetition ... is False"
-subtitle: "\"As usual, goodness hardly puts up a fight\" <br /> -Bill Watterson"
+subtitle: "\"As usual, goodness hardly puts up a fight.\" <br /> -Bill Watterson"
 date: 2021-01-12 23:45:13 -0400
 background: '/img/posts/parrep/parrepfoams.png'
 categories: parallel-repetition 
