--- a/_posts/2021-08-21-obfuscated-plagiarism.html
+++ b/_posts/2021-08-21-obfuscated-plagiarism.html
@@ -2,7 +2,7 @@
 layout: post
 title: "Efficiently Detecting Obfuscated Plagiarism"
 subtitle: "\"People pay more attention when they think you’re up to something.\"  <br /> -Bill Watterson "
-date: 2021-08-23 11:45:13 
+date: 2021-08-23 11:45:13 -0400
 background: '/img/posts/plagiarism/blast.jpeg'
 categories: plagiarism
 published: true
@@ -18,8 +18,8 @@ figure {
 }
 
 figcaption {
-  background-color: black;
-  color: white;
+  background-color: rgb(248, 247, 174);
+  color: rgb(0, 0, 0);
   font-style: italic;
   padding: 2px;
   text-align: center;
