--- a/_posts/2021-08-21-obfuscated-plagiarism.html
+++ b/_posts/2021-08-21-obfuscated-plagiarism.html
@@ -32,7 +32,7 @@ figcaption {
 
 <p>
 
-  Hi! It's been awhile. Quarantine hasn't been all fun and daisies for me personally (or most other people I imagine), but I am trying to get myself motivated and back into the swing of things. But I am not here to bore you with all that. Suffice it to say that hopefully I will start posting more regularly now as I head into my PhD! 
+  Hi! It's been awhile. I lost motivation for a while there, and moved to a different state, but I won't keep boring you with all that. Suffice it to say that hopefully I will start posting more regularly now as I head into my PhD! 
 
 </p>
 
