explaining theory is hard

--- a/_posts/2021-09-01-sunflowers.html
+++ b/_posts/2021-09-01-sunflowers.html
@@ -4,7 +4,7 @@ title: "Encoding Sunflowers"
 subtitle: "\"Reading goes faster if you don't sweat comprehension.\"  <br /> -Bill Watterson "
 date: 2021-09-07 11:45:13 -0400
 background: '/img/posts/sunflowers/sunflowers.jpeg'
-categories: plagiarism
+categories: sunflowers
 published: true
 ---
 
