--- a/_posts/2022-06-13-sum-product.html
+++ b/_posts/2022-06-13-sum-product.html
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Sum-Product Theorems for the Reals (and Crossing Numbers)"
+title: "Crossing Numbers and a Sum-Product Theorem."
 subtitle: "\"If you can't win by reason, go for volume.\" <br /> -Bill Watterson"
-date: 2022-06-14 11:45:13 -0400
+date: 2022-06-16 11:45:13 -0400
 background: '/img/posts/sum-product/calvinhobbes.jpeg'
 categories: combinatorics 
 published: true
